[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Textures/Backgrounds/pause_rahmen_holz.png" type="Texture" id=2]
[ext_resource path="res://Menu/Textures/Buttons/pause_button_1.png" type="Texture" id=3]
[ext_resource path="res://Menu/Textures/Buttons/pause_button_2.png" type="Texture" id=4]
[ext_resource path="res://Menu/Fonts/LoveYaLikeASister.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]

resource_local_to_scene = true
size = 230
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Resource", "Settings" ]

[node name="PauseMenu" type="Node"]

script = ExtResource( 1 )

[node name="CameraMenu" type="Camera2D" parent="." index="0"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Background_MainMenu_2" type="Sprite" parent="." index="1"]

scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]

[node name="Control" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Button_Continue" type="TextureButton" parent="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -205.0
margin_top = -260.0
margin_right = 1612.0
margin_bottom = 525.0
rect_scale = Vector2( 0.23, 0.23 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Focus", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Textures", "Visibility" ]

[node name="Label_Continue" type="Label" parent="Control/Button_Continue" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 466.0
margin_top = 227.0
margin_right = 1386.0
margin_bottom = 514.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Continue"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Button_MainMenu" type="TextureButton" parent="Control" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -205.0
margin_top = -85.0
margin_right = 1620.0
margin_bottom = 700.0
rect_scale = Vector2( 0.23, 0.23 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Margin", "Rect", "Textures", "Visibility" ]

[node name="Label_MainMenu" type="Label" parent="Control/Button_MainMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 398.0
margin_top = 219.0
margin_right = 1469.0
margin_bottom = 506.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Main Menu"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Button_QuitGame" type="TextureButton" parent="Control" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -205.0
margin_top = 91.0
margin_right = 1612.0
margin_bottom = 876.0
rect_scale = Vector2( 0.23, 0.23 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="Label_QuitGame" type="Label" parent="Control/Button_QuitGame" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 413.0
margin_top = 226.0
margin_right = 1463.0
margin_bottom = 513.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Quit Game"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts", "custom_styles" ]

[connection signal="pressed" from="Control/Button_MainMenu" to="." method="_on_Button_MainMenu_pressed"]

[connection signal="pressed" from="Control/Button_QuitGame" to="." method="_on_Button_QuitGame_pressed"]


